# SPC_H2O_analysis

./: CMakeLists.txt  README.md  coulomb.cpp  coulomb.h  main.cpp  spc.cpp  spc.h
input/: H2O.txt  h2o_10.txt  h2o_3.txt  h2o_5.txt  h2o_HBOND2-2A.txt  h2o_HBOND5A.txt
src/: CMakeLists.txt  atom.h  build_system.cpp  build_system.h  forces.cpp  forces.h  hessian.cpp  hessian.h  lennard_jones.cpp  lennard_jones.h  main.cpp  spc.cpp  spc.h  vibrations.cpp  vibrations.h
